--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -2,12 +2,23 @@
 \chapter{Introducción}
 \label{cha:Introduction}
 
-El porque de los usos de los métodos numéricos, porque elegimos la ecuación de ondas, nos parece una forma chula y de hecho practica de unir las matemáticas con la música
-se podría ampliar el estudio y hacer música escrita como ecuaciones.
+Los avances a pasos agigantados de la computación y la tecnología de los últimos años, han logrado que matemáticas, y en particular en el campo de las ecuaciones diferenciales, hayan dado un vuelco.\\
 
-pero en ocasiones hay ecuaciones en las que no se puede, o es muy complicado, obtener soluciones exactas y por ello aplicamos métodos numéricos. \\
+En situaciones, en las que anteriormente teníamos que desistir o conformarnos con soluciones parciales o en marcos específicos ahora podemos hacer uso de los métodos numéricos para conseguir una aproximación a la realidad cada vez más exacta.\\
 
-Comenzaremos dando una definición general de la ecuación de ondas en $\mathbb{R}^n$, con $n \geq 1$ \citep{Wazwaz}\citep{AnIntroduction}
+En este trabajo utilizaremos estás técnicas, para observar la resolución de las ecuaciones en derivadas parciales de onda. \\
+
+La belleza de obtener numéricamente estas soluciones es que podremos manejarlas para obtener, gráficas, y distintos tipos de archivos, cada vez más exactos conforme la potencia de los dispositivos va mejorando.\\
+
+Nosotros nos centraremos en dar una visión general de la resolución de la ecuación de onda, en el capítulo \ref{cha:preliminares} nos adentraremos en los conceptos previos necesarios para la comprensión del trabajo, como los Espacios de Lebesgue, el concepto de producto interior, o el mallado que utilizaremos para definir nuestro esquema numérico.\\
+
+En el capítulo siguiente, \ref{cha:Comenzamos}, introduciremos la ecuación de onda desde un marco físico y realizaremos una clasificación de la misma. Posteriormente nos centraremos en un tipo concreto de soluciones, llamadas de onda viajera. Por último, analizaremos la energía de la ecuación y veremos en que condiciones se cumplirá la Ley de la conservación de la energía. \\
+
+Una vez tenemos todos los cimientos construidos, en el capítulo \ref{cha:Comparativa}, haremos uso de uno de los métodos más utilizados para la resolución numérica, el método de las diferencias finitas. Continuando el capítulo, analizaremos la consistencia y estabilidad de las soluciones obtenidas. Acabaremos trasladando tanto las soluciones de tipo onda viajera como la conservación de la energía al ámbito discreto.\\
+
+
+Concluiremos el grueso del trabajo llevando todos los avances hechos  teóricamente a la practica. Esto lo realizaremos mediante el script de Python, este se puede encontrar en el Anexo \ref{cha:Anexo} y en el Github del trabajo, \
+
 
 
 
