--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -173,6 +173,28 @@ language={English},
 
 }
 
+@book{strauss,
+author={Strauss, W.A.},
+year={2008},
+title={Partial Differential Equations: An Introduction},
+publisher={Wiley},
+keywords={Ecuaciones diferenciales; Ecuaciones en derivadas parciales; Soluciones numéricas},
+isbn={9780470385531},
+language={English},
+
+}
+
+@book{Ganzha,
+author={Ganzha,Victor G. and Vorozhtsov,Evgenii V.},
+year={1996},
+title={Numerical solutions for partial differential equations: problem solving using Mathematica},
+publisher={CRC Press},
+address={Boca Raton (Florida) [etc.]},
+keywords={Ecuaciones en derivadas parciales; Matemáticas; Matemáticas computacionales; Mathematica (Lenguaje de programación); Proceso de datos},
+isbn={0849373794;9780849373794;},
+language={English},
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
